[project]
name = "bahninfo"
version = "0.0.1"
description = "bahninfo offers several ways to interact with Deutsche Bahn's API catalogue."
readme = "README.md"
authors = [
    { name = "Lukas Scholz", email = "lscholz14@googlemil.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
